--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,18 @@
-# render.yaml
 services:
   - type: web
-    name: sele-login-page
+    name: client
     env: node
-    plan: free
     buildCommand: |
-      cd client
-      npm install
-      npm run build
-      cd ../server
-      npm install
-    startCommand: node index.js
-    envVars:
-      - key: NODE_VERSION
-        value: 18
-      - key: PORT
-        value: 10000
-      - key: mongodb+srv://raj-p:898rdp1242@deepfake-detection.hza0bt7.mongodb.net/?retryWrites=true&w=majority&appName=deepfake-detection
-        value: your_mongodb_connection_string_here
+      cd client && npm install && npm run build
+    startCommand: |
+      cd client && npm run start
+    port: 3000
+
+  - type: web
+    name: server
+    env: node
+    buildCommand: |
+      cd server && npm install
+    startCommand: |
+      cd server && npm run start
+    port: 8080
