--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "react-scripts build && cp build/index.html /opt/render/project/src/client/build/"
   },
   "keywords": [],
   "author": "",
